--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "clear && node index.js",
-    "test1": "clear && node ./algorithm2/divideConquer.js"
+    "test1": "clear && node ./algorithm2/divideConquer.js",
+    "hanoi": "clear && node ./hanoi/hanoi.js"
   },
   "type": "module",
   "author": "",
