--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "clear && node index.js",
     "test1": "clear && node ./algorithm2/divideConquer.js",
     "hanoi": "clear && node ./hanoi/hanoi.js",
-    "stack": "clear && node ./structure/stack.js"
+    "stack": "clear && node ./structure/stack.js",
+    "unionFind": "node ./unionFind.js"
   },
   "type": "module",
   "author": "",
